--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "fs-extra": "^0.16.3",
     "js-yaml": "^3.2.7",
     "marked": "^0.3.3",
-    "react": "^0.13.0-rc1",
-    "react-tools": "^0.13.0-rc1",
+    "react": "^0.13.1",
+    "react-router": "^0.13.2",
+    "react-tools": "^0.13.1",
     "ts-style": "^0.4.1"
   },
   "devDependencies": {
