--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs-extra": "^0.16.3",
     "js-yaml": "^3.2.7",
     "marked": "^0.3.3",
+    "mustache": "^2.0.0",
     "react": "^0.13.1",
     "react-router": "^0.13.2",
     "react-tools": "^0.13.1",
