--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ts-style": "^0.6.0"
   },
   "devDependencies": {
-    "tsd": "^0.6.0-beta.5"
+    "tsd": "^0.6.0-beta.5",
+    "typescript": "^1.5.0-alpha"
   }
 }
