--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react": "^0.13.1",
     "react-router": "^0.13.2",
     "react-tools": "^0.13.1",
-    "ts-style": "^0.6.0"
+    "ts-style": "^0.6.0",
+    "whatwg-fetch": "^0.7.0"
   },
   "devDependencies": {
     "tsd": "^0.6.0-beta.5",
-    "typescript": "^1.5.0-alpha"
+    "typescript": "^1.5.0-alpha",
+    "webpack": "^1.7.3"
   }
 }
