--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "tsd": "^0.6.0-beta.5",
-    "typescript": "^1.5.0-alpha",
+    "typescript": "^1.7.5",
     "webpack": "^1.7.3"
   }
 }
