--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "marked": "^0.3.3",
     "mustache": "^2.0.0",
     "object-assign": "^2.0.0",
-    "react": "^0.13.1",
-    "react-router": "^0.13.2",
-    "react-tools": "^0.13.1",
-    "ts-style": "^0.6.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1",
     "whatwg-fetch": "^0.7.0"
   },
   "devDependencies": {
-    "tsd": "^0.6.0-beta.5",
-    "typescript": "^1.7.5",
+    "ts-style": "^0.7.1",
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4",
     "webpack": "^1.7.3"
   }
 }
