--- a/package.json
+++ b/package.json
@@ -26,13 +26,11 @@
     "object-assign": "^2.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^2.4.1",
-    "whatwg-fetch": "^0.7.0"
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "ts-style": "^0.7.1",
     "typescript": "^1.8.10",
-    "typings": "^1.0.4",
-    "webpack": "^1.7.3"
+    "typings": "^1.0.4"
   }
 }
